--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -38,7 +38,7 @@
  INPUT BG		#F2F8FC
  PAGE TITLE		#004373
  ERROR MSG		#D80000
- SUCCESS MSG		#548E00
+ SUCCESS MSG		#0F3834
  DEACTIVATED		#777777
  DEA LIGHT		#C9C9C9
  TEXT			#A4A4A4
@@ -582,9 +582,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 
 /*FORM BUTTONS*/
 .cancelButton, .activeButton {
-    border-style: solid;
+    border-style: solid;    
     padding-top: 0.10em;
     padding-bottom: 0.10em;
+    
 }
 
 .cancelButton {
@@ -691,6 +692,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 /*STATUS OR SUCCESS MESSAGE*/
+.messageSuccess {
+    color: #0F3834;
+}
+
 .messageStatus {
     color: #548E00;
 }
@@ -719,4 +724,12 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	font-family: serif;
 	border-left-width: 2px !important;
 	border-right-width: 2px !important;
+}
+
+.searchMenu .quickSearchBtn {
+	padding:0;
+}
+
+.fullItem .messageSuccess b {
+	color:#0F3834;
 }
