--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/images.css
@@ -300,7 +300,12 @@
 		}
 	
 	/*LIST COMPONENT*/
-	
+		.checkboxSelectButton {
+			background-image: url('../images/All_DropDown_TriangleOpen_15_Active.gif');
+			background-repeat: no-repeat;
+			background-position: center;
+		}
+		
 		.itemList .checkboxSelectButton {
 			background-image: url('../images/All_DropDown_TriangleOpen_15_Active.gif');
 			background-repeat: no-repeat;
