--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
@@ -37,7 +37,7 @@ All rights reserved. Use is subject to license terms.
 
 <tr:iterator id="iterDepositorContextList" var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" rows="0" varStatus="index">
 
-	<h:panelGroup layout="block" styleClass="full_area0 itemHeader noTopBorder" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
+	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
 		<span class="xLarge_area0 endline">
 			&#160;
 		</span>
@@ -70,10 +70,7 @@ All rights reserved. Use is subject to license terms.
 		</h3>
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
-				<b class="xLarge_area0 endline labelLine">
-					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
 					<h:outputText value="#{context.description}"/>
 				</span>
 			</div>
