--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
@@ -98,16 +98,22 @@
 				&nbsp;
 			</span>
 			<span class="seperator"></span>
-			<span class="endline huge_area0_p7 step">
+			<span class="endline huge_area0_p7 step messageSuccess">
 				<b>
-					<h:outputText value="#{lbl.easy_submission_lblStep}"/> 1
+					<span class="free_area0">
+						<h:outputText value="#{lbl.easy_submission_lblStep}"/> 1
+					</span>
 				</b>
+				<h:panelGroup styleClass="free_area0 xTiny_marginLExcl min_imgBtn submitSuccessful">&#160;</h:panelGroup>
 			</span>
 			<span class="seperator"></span>
-			<span class="endline huge_area0_p7 step">
+			<span class="endline huge_area0_p7 step messageSuccess">
 				<b>
-					<h:outputText value="#{lbl.easy_submission_lblStep}"/> 2
+					<span class="free_area0">
+						<h:outputText value="#{lbl.easy_submission_lblStep}"/> 2
+					</span>
 				</b>
+				<h:panelGroup styleClass="free_area0 xTiny_marginLExcl min_imgBtn submitSuccessful">&#160;</h:panelGroup>
 			</span>
 			<span class="seperator"></span>
 			<span class="endline huge_area0_p7 step">
