--- a/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
@@ -30,22 +30,22 @@
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 
-<link href="/cone/js/jquery.suggest.css" rel="stylesheet" type="text/css" />
-
-<style type="text/css">
-	.headerLogo {background-image: url("<h:outputText value='#{ApplicationBean.logoUrl}'/>") !important; background-repeat: norepeat; background-position: top left;}
-</style>
-
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-<link href="<h:outputText value='#{ApplicationBean.commonPresentationUrl}'/>resources/cssFramework/main.css" type="text/css" rel="stylesheet"/>
-<h:outputText value="#{ApplicationBean.pubmanStyleTags}" escape="false"/>
-<link href="<h:outputText value='#{ApplicationBean.commonPresentationUrl}'/>resources/cssFramework/themes/skin_blue/styles/theme.css" id="Blue" type="text/css" title="Blue" rel="alternate stylesheet"/>
-<script type="text/javascript" language="JavaScript">var cookieVersion = "<h:outputText value='#{ApplicationBean.cookieVersion}'/>";</script>
-<link rel="search" type="application/opensearchdescription+xml" title="<h:outputText value='#{lbl.openSearch_desc} #{lbl.openSearch_shortDesc} #{Header.type}'/>" href="<h:outputText value='#{ApplicationBean.pubmanInstanceUrl}#{ApplicationBean.appContext}' />search/OpenSearch.jsp" />
 <meta http-equiv="pragma" content="no-cache"/>
 <meta http-equiv="cache-control" content="no-cache"/>
 <meta http-equiv="expires" content="0"/>
+<style type="text/css">
+	.headerLogo {background-image: url("<h:outputText value='#{ApplicationBean.logoUrl}'/>") !important; background-repeat: norepeat; background-position: top left;}
+</style>
+<h:outputText value="#{ApplicationBean.pubmanStyleTags}" escape="false"/>
+
+<script type="text/javascript" language="JavaScript">var cookieVersion = "<h:outputText value='#{ApplicationBean.cookieVersion}'/>";</script>
+
+<link rel="search" type="application/opensearchdescription+xml" title="<h:outputText value='#{lbl.openSearch_desc} #{lbl.openSearch_shortDesc} #{Header.type}'/>" href="<h:outputText value='#{ApplicationBean.pubmanInstanceUrl}#{ApplicationBean.appContext}' />search/OpenSearch.jsp" />
+
 <script type="text/javascript" language="JavaScript" src="resources/commonJavaScript/jquery/jquery.min.js">;</script>
 <script type="text/javascript" language="JavaScript" src="resources/scripts.js">;</script>
 <script src="./resources/commonJavaScript/eSciDoc_javascript.js" language="JavaScript" type="text/javascript">;</script>
+<script src="./resources/commonJavaScript/theme_cookie.js" language="JavaScript" type="text/javascript">;</script>
+
+<link href="/cone/js/jquery.suggest.css" rel="stylesheet" type="text/css" />
