--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
@@ -1,65 +1,59 @@
 <%
-            /* 
-            CDDL HEADER START
+  /* 
+  CDDL HEADER START
 
-            The contents of this file are subject to the terms of the
-            Common Development and Distribution License, Version 1.0 only
-            (the "License"). You may not use this file except in compliance
-            with the License.
+  The contents of this file are subject to the terms of the
+  Common Development and Distribution License, Version 1.0 only
+  (the "License"). You may not use this file except in compliance
+  with the License.
 
-            You can obtain a copy of the license at license/ESCIDOC.LICENSE
-            or http://www.escidoc.de/license.
-            See the License for the specific language governing permissions
-            and limitations under the License.
+  You can obtain a copy of the license at license/ESCIDOC.LICENSE
+  or http://www.escidoc.de/license.
+  See the License for the specific language governing permissions
+  and limitations under the License.
 
-            When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
-            If applicable, add the following below this CDDL HEADER, with the
-            fields enclosed by brackets "[]" replaced with your own identifying
-            information: Portions Copyright [yyyy] [name of copyright owner]
+  When distributing Covered Code, include this CDDL HEADER in each
+  file and include the License file at license/ESCIDOC.LICENSE.
+  If applicable, add the following below this CDDL HEADER, with the
+  fields enclosed by brackets "[]" replaced with your own identifying
+  information: Portions Copyright [yyyy] [name of copyright owner]
 
-            CDDL HEADER END
+  CDDL HEADER END
 
 
-            Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
-            All rights reserved. Use is subject to license terms.
-             */
+  Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
+  für wissenschaftlich-technische Information mbH and Max-Planck-
+  Gesellschaft zur Förderung der Wissenschaft e.V.
+  All rights reserved. Use is subject to license terms.
+   */
 %>
 <h:panelGroup rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0}">
-<div class="full_area0 itemHeader noTopBorder">
-	<span class="xLarge_area0 endline">
-		&#160;
-	</span>
-	<span class="seperator"></span>
-	<span class="free_area0_p8 endline itemHeadline">
-		<b>
-			<h:outputLink id="lnkQAWorkspace" title="#{tip.chooseWorkspace_QAWorkspace}"  value="#{ApplicationBean.appContext}QAWSPage.jsp" rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0}">
-				<h:outputText value="#{lbl.chooseWorkspace_lnkQAWorkspace}" rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0}"/>
-			</h:outputLink>
-		</b>
-	</span>
-</div>
-
-<div class="full_area0 itemBlock noTopBorder">
-	<h3 class="xLarge_area0_p8 endline blockHeader">
-		&#160;
-	</h3>
-	<!-- 
-	<div class="free_area0 itemBlockContent endline">		
-		<div class="free_area0 endline itemLine firstLine">
-			<b class="xLarge_area0 endline labelLine">
-				<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
+	<div class="full_area0 itemHeader">
+		<span class="xLarge_area0 endline">
+			&#160;
+		</span>
+		<span class="seperator"></span>
+		<span class="free_area0_p8 endline itemHeadline">
+			<b>
+				<h:outputLink id="lnkQAWorkspace" title="#{tip.chooseWorkspace_QAWorkspace}"  value="#{ApplicationBean.appContext}QAWSPage.jsp" rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0}">
+					<h:outputText value="#{lbl.chooseWorkspace_lnkQAWorkspace}" rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0}"/>
+				</h:outputLink>
 			</b>
-			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{lbl.chooseWorkspace_descQAWorkspace}" />
-			</span>
-		</div>
-		
+		</span>
 	</div>
-	-->
-</div>
+	<div class="full_area0 itemBlock noTopBorder">
+		<h3 class="xLarge_area0_p8 endline blockHeader">
+			&#160;
+		</h3>
+		<div class="free_area0 itemBlockContent endline">		
+			<div class="free_area0 endline itemLine firstLine">
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+					&#160;
+					<br /><br />
+				</span>
+			</div>
+		</div>
+	</div>
 </h:panelGroup>
 <h:panelGroup rendered="#{LoginHelper.isModerator and DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}">
 	<div class="full_area0 itemHeader">
@@ -79,18 +73,14 @@
 		<h3 class="xLarge_area0_p8 endline blockHeader">
 			&#160;
 		</h3>
-		<!-- 
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
-				<b class="xLarge_area0 endline labelLine">
-					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{lbl.chooseWorkspace_descImportWorkspace}" />
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+					&#160;
+					<br /><br />
 				</span>
 			</div>
 		</div>
-		-->
 	</div>
 </h:panelGroup>				
 <h:panelGroup rendered="#{LoginHelper.isYearbookEditor}">
@@ -111,18 +101,14 @@
 		<h3 class="xLarge_area0_p8 endline blockHeader">
 			&#160;
 		</h3>
-		<!-- 
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
-				<b class="xLarge_area0 endline labelLine">
-					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{lbl.chooseWorkspace_descYearbookWorkspace}" />
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+					&#160;
+					<br /><br />
 				</span>
 			</div>
 		</div>
-		-->
 	</div>
 </h:panelGroup>
 <h:panelGroup rendered="#{(LoginHelper.isDepositor) and ContextListSessionBean.yearbookModeratorContextListSize>0}">
@@ -143,18 +129,14 @@
 		<h3 class="xLarge_area0_p8 endline blockHeader">
 			&#160;
 		</h3>
-		<!-- 
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
-				<b class="xLarge_area0 endline labelLine">
-					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{lbl.chooseWorkspace_descYearbookModeratorWorkspace}" />
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+					&#160;
+					<br /><br />
 				</span>
 			</div>
 		</div>
-		-->
 	</div>
 </h:panelGroup>
 <h:panelGroup rendered="#{LoginHelper.isReporter}">
@@ -175,17 +157,13 @@
 		<h3 class="xLarge_area0_p8 endline blockHeader">
 			&#160;
 		</h3>
-		<!-- 
 		<div class="free_area0 itemBlockContent endline">		
 			<div class="free_area0 endline itemLine firstLine">
-				<b class="xLarge_area0 endline labelLine">
-					<h:outputText value="#{lbl.submission_lblDescription}" /><span class="noDisplay">: </span>
-				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{lbl.chooseWorkspace_descReportWorkspace}" />
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+					&#160;
+					<br /><br />
 				</span>
 			</div>
 		</div>
-		-->
 	</div>
 </h:panelGroup>
