--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Manual.jspf
@@ -156,6 +156,7 @@
 </div>
 <div class="full_area0 formButtonArea">	
 	<h:commandLink id="lnkLoadStep2" styleClass="free_area1_p8 cancelButton xLarge_marginLIncl" action="#{EasySubmission.loadStep2}"><h:outputText value="#{lbl.easy_submission_btnBack}" /></h:commandLink>
+	<h:commandLink styleClass="free_area1_p8 cancelButton" id="lnkCancel" value="#{lbl.EditItem_lnkCancel}" action="#{EasySubmission.cancel}"/>
 	<h:commandLink id="lnkNext" styleClass="free_area1_p8 activeButton" action="#{EasySubmission.loadStep4Manual}"><h:outputText value="#{lbl.easy_submission_btnNext}" /></h:commandLink>
 </div>
 
