--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
@@ -594,6 +594,7 @@
 </div>
 <div class="full_area0 formButtonArea">	
 	<h:commandLink id="lnkBack" title="#{tip.easy_submission_btnBack}" styleClass="free_area1_p8 cancelButton xLarge_marginLIncl" action="#{EasySubmission.loadStep4Manual}"><h:outputText value="#{lbl.easy_submission_btnBack}" /></h:commandLink>
+	<h:commandLink styleClass="free_area1_p8 cancelButton" id="lnkCancel" value="#{lbl.EditItem_lnkCancel}" action="#{EasySubmission.cancel}"/>
 	<h:commandLink id="lnkSave" title="#{tip.easy_submission_btnSave}" styleClass="free_area1_p8 endline activeButton" action="#{EasySubmission.save}"><h:outputText value="#{lbl.easy_submission_btnSave}" /></h:commandLink>
 	<h:commandLink id="lnkAddDetails" title="#{tip.easy_submission_btnAddDetails}" styleClass="free_area1_p8 activeButton" action="#{EasySubmission.loadPreview}"><h:outputText value="#{lbl.easy_submission_btnAddDetails}" /></h:commandLink>
 </div>
