--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
@@ -177,6 +177,7 @@
 </div>
 <div class="full_area0 formButtonArea">	
 	<h:commandLink id="lnkBack" title="#{tip.easy_submission_btnBack}" styleClass="free_area1_p8 cancelButton xLarge_marginLIncl" action="#{EasySubmission.validateAndLoadStep3Manual}"><h:outputText value="#{lbl.easy_submission_btnBack}" /></h:commandLink>
+	<h:commandLink styleClass="free_area1_p8 cancelButton" id="lnkCancel" value="#{lbl.EditItem_lnkCancel}" action="#{EasySubmission.cancel}"/>
 	<h:commandLink id="lnkNext" title="#{tip.easy_submission_btnNext}" styleClass="free_area1_p8 activeButton" action="#{EasySubmission.loadStep5Manual}"><h:outputText value="#{lbl.easy_submission_btnNext}" /></h:commandLink>
 </div>
 
