--- a/pubman/pubman_presentation/src/main/webapp/viewItem/SystemDetailGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/SystemDetailGroup.jspf
@@ -79,6 +79,16 @@
 			</span>
 		</h:panelGroup>
 
+<%-- Creator name --%>
+<%--		<h:panelGroup styleClass="free_area0 endline itemLine">
+			<b class="xLarge_area0_p8 endline labelLine clear">
+				<h:outputText value="#{lbl.ViewItemFull_lblnameOfCreator}"/><span class="noDisplay">: </span>
+			</b>
+			<span class="xHuge_area0 xTiny_marginLExcl endline">
+				<h:outputText value="#{ViewItemFull.pubItem.pr}, #{lbl.ViewItemFull_lblIsAffiliatedTo}: #{ViewItemFull.affiliations}"/>
+			</span>
+		</h:panelGroup>--%>
+
 		<a id="lnkHideGroupSystemDetails" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</h:panelGroup>
 	<a id="lnkShowGroupSystemDetails" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
